# nonbin

./: .build.yml  Cargo.toml  config.toml  config.toml.example  rustfmt.toml
assets/: man.md  man.txt
migrations/: 20230312053029_create_paste_table.down.sql  20230312053029_create_paste_table.up.sql
src/: config.rs  db.rs  error.rs  main.rs  markdown.rs  models.rs  types.rs  words.rs
src/commands/: mod.rs  purge_expired.rs  serve.rs
src/controllers/: paste.rs
src/server/: mod.rs
src/storage/: file.rs  mod.rs  s3.rs
src/types/: mod.rs
