[package]
name = "nonbin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
aws-config = { version = "0.54.1", optional = true }
aws-sdk-s3 = { version = "0.24.0", optional = true }
axum = { version = "0.6.7", features = ["multipart", "macros"] }
chrono = "0.4.23"
clap = { version = "4.1.10", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "chrono"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
toml = "0.7.2"
tower-http = { version = "0.3.5", features = ["limit", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.2"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[features]
default = ["sqlite"]

s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
