[package]
name = "nonbin"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi-to-html = "0.1.3"
anyhow = "1.0.70"
aws-config = { version = "0.55.1", optional = true }
aws-sdk-s3 = { version = "0.26.0", optional = true }
axum = { version = "0.6.17", features = ["multipart", "macros", "headers"] }
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
directories-next = "2.0.0"
futures-util = "0.3.28"
markdown = "1.0.0-alpha.8"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "chrono"] }
textwrap = "0.16.0"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
toml = "0.7.3"
tower-http = { version = "0.4.0", features = ["limit", "normalize-path", "trace"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.2"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }

[features]
default = ["sqlite"]

s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[patch.crates-io]
tower-http = { git = "https://github.com/tower-rs/tower-http", rev = "8f028480de5790eae6380b72e5257a0879a9eca0" }
